# Agent-bench

./: README.md  pyproject.toml  vercel.json  verify_database_tables.py  verify_new_tasks.py
docs~/: architecture.md  roadmap.md  task-spec.md
landing/: package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: comparison.tsx  cta.tsx  footer.tsx  hero-data-panel.tsx  hero-showcase.tsx  hero.tsx  metrics-bento.tsx  nav.tsx  pipeline.tsx  problem.tsx  roadmap.tsx
landing/lib/: motion.ts
runner/: __init__.py  calibration.py  cli.py  docker_client.py  executor.py  health.py  loader.py  logging.py  metrics.py  models.py  multi_run.py  replay.py  scoring.py  storage.py  validator.py
runner/db/: __init__.py  connection.py  init-password.sh  schema.sql
tasks/calculate-statistics/: instruction.md  task.toml
tasks/count-error-lines/: instruction.md  task.toml
tasks/deduplicate-records/: instruction.md  task.toml
tasks/extract-emails/: instruction.md  task.toml
tasks/filter-logs-by-date/: instruction.md  task.toml
tasks/find-database-files/: README.md  instruction.md  task.toml
tasks/find-largest-file/: instruction.md  task.toml
tasks/find-security-issues/: instruction.md  task.toml
tests/: __init__.py  conftest.py  test_agents.py  test_calibration.py  test_docker_client.py  test_executor.py  test_executor_integration.py  test_health.py  test_loader.py  test_metrics.py  test_models.py  test_multi_run.py  test_pipeline_integration.py  test_replay.py  test_scoring.py  test_validator.py
(+66 files in other folders)
