[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench"
version = "0.1.0"
description = "Reliability-first benchmarking framework for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AgentBench Team"},
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "docker>=6.0",
    "structlog>=23.0",
    "typer>=0.9",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
]

[project.scripts]
agentbench = "runner.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]
ignore = ["E501"]  # line too long (handled by black)

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["runner"]
